add optional wireframe hero

--- a/internal/templates/docs.mustache
+++ b/internal/templates/docs.mustache
@@ -1,5 +1,12 @@
 <!-- generated {{date}} -->
 
-# {{info.name}}
-
-> {{info.pitch}}
+{{#wireframePath}}
+<p align="center">
+  <img src="../../{{{wireframePath}}}" width="40%"/>
+</p>
+{{/wireframePath}}
+<h1 align="center">
+  {{info.name}}
+  <br>
+  <sup><sub><sup>{{info.pitch}}<sup></sub>
+</h1>
