add inspiration section

--- a/internal/templates/docs.mustache
+++ b/internal/templates/docs.mustache
@@ -14,3 +14,11 @@
 {{#info.description}}
 {{.}}
 {{/info.description}}
+
+{{#info.inspirationLinks.0}}
+## Inspiration
+
+{{#info.inspirationLinks}}
+- {{{.}}}
+{{/info.inspirationLinks}}
+{{/info.inspirationLinks.0}}
