--- a/internal/templates/readme.mustache
+++ b/internal/templates/readme.mustache
@@ -3,7 +3,7 @@
 <p align="center">
 {{#wireframes}}
   <a href="{{{path}}}">
-    <img src="{{{wireframePath}}}" width="45%"/>
+    <img src="{{{wireframePaths.0}}}" width="45%"/>
   </a>
 {{/wireframes}}
 </p>
