add categories to templates

--- a/internal/templates/readme.mustache
+++ b/internal/templates/readme.mustache
@@ -1,13 +1,18 @@
 # Project Plans
 
+{{#wireframesByCategory}}
+{{#0}}
+
+### {{0}}
+{{/0}}
 <p align="center">
-{{}}
-{{#wireframes}}
+{{#1}}
   <a href="{{{path}}}">
     <img src="{{{wireframePaths.0}}}" width="45%"/>
   </a>
-{{/wireframes}}
+{{/1}}
 </p>
+{{/wireframesByCategory}}
 
 ## Development
 
