finish implementing nesting

--- a/internal/templates/readme.mustache
+++ b/internal/templates/readme.mustache
@@ -1,18 +1,15 @@
 # Project Plans
 
-{{#wireframesByCategory}}
-{{#0}}
-
-### {{0}}
-{{/0}}
+{{#wireframeCategories}}
+{{name}}
 <p align="center">
-{{#1}}
+{{#items}}
   <a href="{{{path}}}">
     <img src="{{{wireframePaths.0}}}" width="45%"/>
   </a>
-{{/1}}
+{{/items}}
 </p>
-{{/wireframesByCategory}}
+{{/wireframeCategories}}
 
 ## Development
 
