convert description blocks to introduction

--- a/internal/templates/docs.mustache
+++ b/internal/templates/docs.mustache
@@ -11,10 +11,10 @@
   <sup><sub><sup>{{info.pitch}}<sup></sub>
 </h1>
 
-{{#info.description}}
-{{{.}}}
+{{#info.introduction}}
+{{{body}}}
 
-{{/info.description}}
+{{/info.introduction}}
 {{#galleryPaths.0}}
 {{#galleryPaths}}
 ![](/{{{.}}})
