add steps and body

--- a/internal/templates/docs.mustache
+++ b/internal/templates/docs.mustache
@@ -45,6 +45,24 @@
 
 {{/tools.0}}
 {{/info.supplies}}
+{{#info.steps.0}}
+{{#info.steps}}
+# {{{title}}}
+
+{{#body.0}}
+{{#body}}
+{{{.}}}
+{{/body}}
+
+{{/body.0}}
+{{#imagePaths.0}}
+{{#imagePaths}}
+<img src="{{{.}}}" width="490"/>
+{{/imagePaths}}
+
+{{/imagePaths.0}}
+{{/info.steps}}
+{{/info.steps.0}}
 {{#galleryPaths.0}}
 {{#galleryPaths}}
 ![](/{{{.}}})
