add remaining image path templating

--- a/internal/templates/docs.mustache
+++ b/internal/templates/docs.mustache
@@ -18,6 +18,12 @@
 {{/body}}
 
 {{/body.0}}
+{{#imagePaths.0}}
+{{#imagePaths}}
+<img src="{{{.}}}" width="490"/>
+{{/imagePaths}}
+
+{{/imagePaths.0}}
 {{/info.introduction}}
 {{#info.supplies}}
 # Supplies
@@ -28,6 +34,12 @@
 
 {{/body}}
 {{/body.0}}
+{{#imagePaths.0}}
+{{#imagePaths}}
+<img src="{{{.}}}" width="490"/>
+{{/imagePaths}}
+
+{{/imagePaths.0}}
 {{#materials.0}}
 ## Materials
 
