add steps title and index

--- a/internal/templates/docs.mustache
+++ b/internal/templates/docs.mustache
@@ -58,8 +58,10 @@
 {{/tools.0}}
 {{/info.supplies}}
 {{#info.steps.0}}
+# Steps
+
 {{#info.steps}}
-# {{{title}}}
+## {{__index}}. {{{title}}}
 
 {{#body.0}}
 {{#body}}
