indent titles one more

--- a/internal/templates/docs.mustache
+++ b/internal/templates/docs.mustache
@@ -26,7 +26,7 @@
 {{/imagePaths.0}}
 {{/info.introduction}}
 {{#info.supplies}}
-# Supplies
+## Supplies
 
 {{#body.0}}
 {{#body}}
@@ -41,7 +41,7 @@
 
 {{/imagePaths.0}}
 {{#materials.0}}
-## Materials
+### Materials
 
 {{#materials}}
 - {{.}}
@@ -49,7 +49,7 @@
 
 {{/materials.0}}
 {{#tools.0}}
-## Tools
+### Tools
 
 {{#tools}}
 - {{.}}
@@ -58,10 +58,10 @@
 {{/tools.0}}
 {{/info.supplies}}
 {{#info.steps.0}}
-# Steps
+## Steps
 
 {{#info.steps}}
-## {{__index}}. {{{title}}}
+### {{__index}}. {{{title}}}
 
 {{#body.0}}
 {{#body}}
